getItemsByMajor
