# storage/api-docs/api-docs.json
@@ -523,6 +523,56 @@
                 ]
             }
         },
+        "/api/auth/recommendedItems": {
+            "get": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "取得就讀科系的商品(推薦商品)",
+                "operationId": "e042f38677b799707fd0fc9312484eef",
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "content": {
+                            "application/json": {
+                                "example": {
+                                    "status": 1,
+                                    "data": [
+                                        {
+                                            "id": 1,
+                                            "owner": 1,
+                                            "category": 2,
+                                            "name": "Book Name",
+                                            "ISBN": "3333-1111-2222-1234",
+                                            "price": 100,
+                                            "quantity": 1,
+                                            "created_at": "2021-11-12T15:15:10.000000Z",
+                                            "updated_at": "2021-11-12T15:15:10.000000Z"
+                                        },
+                                        {
+                                            "id": 2,
+                                            "owner": 2,
+                                            "category": 2,
+                                            "name": "Book Name2",
+                                            "ISBN": "7777-1666-5552-4321",
+                                            "price": 800,
+                                            "quantity": 2,
+                                            "created_at": "2021-11-12T15:15:10.000000Z",
+                                            "updated_at": "2021-11-12T15:15:10.000000Z"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/auth/banRecords": {
             "get": {
                 "tags": [
